--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alyssa-reviews-and-drawers",
+  "name": "ben-drawers-sdc",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -36,11 +36,16 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.15.0",
+    "faker": "^4.1.0",
     "install": "^0.13.0",
     "jquery": "^3.1.1",
+    "knex": "^0.20.4",
+    "mongodb": "^3.4.1",
+    "mongoose": "^5.8.1",
     "mysql": "^2.17.1",
     "nodemon": "^2.0.1",
     "npm": "^6.13.4",
+    "pg": "^7.15.1",
     "react": "^16.12.0",
     "react-animation": "^1.2.2",
     "react-bootstrap": "^1.0.0-beta.16",
