--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "artillery": "^1.6.0-29",
     "axios": "^0.19.0",
     "babel-preset-react": "^6.24.1",
     "bluebird": "^3.7.1",
@@ -40,9 +41,11 @@
     "install": "^0.13.0",
     "jquery": "^3.1.1",
     "knex": "^0.20.4",
+    "loadtest": "^4.0.0",
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.1",
     "mysql": "^2.17.1",
+    "newrelic": "^6.2.0",
     "nodemon": "^2.0.1",
     "npm": "^6.13.4",
     "pg": "^7.15.1",
